css수정 및 장르 버튼 api연결

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
     <header class="title_style">
         <div>
-            <a href="https://github.com/eunkyum/movie-searched.git"
+            <!-- <a href="https://github.com/eunkyum/movie-searched.git"
                 style="color: white; text-decoration-line: none; font-size: 50px;">
-                🍿내배캠 플러스🍿</a>
+                🍿내배캠 플러스🍿</a> -->
+            <a>
+                <img src="mingle_logo2.png" alt="logo-img"> </a>
         </div>
     </header>
 
@@ -23,7 +25,8 @@
         <label></label>
         <div class="search_div">
             <input type="text" id="search_input" placeholder="검색">
-            <button type="submit" onclick=search_btn()>🔍</i></button>
+            <!-- <button type="submit" onclick=search_btn()>🔍</i></button> -->
+            <button type="submit">🔍</button>
         </div>
     </form>
 
